Fix page spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -30,7 +30,6 @@
 
 .header__title {
     width: 730px;
-    display: flex;
     align-self: center;
     margin-left: 64px;
     line-height: 96px;
@@ -48,6 +47,7 @@
     font-size: 18px;
     font-weight: normal;
     z-index: 3;
+    margin: 0;
 }
 
 .header__link {
@@ -94,17 +94,19 @@
     font-size: 18px;
     font-weight: normal;
     color: #2F80ED;
+    margin: 0;
 }
 
 .two-columns__main-text {
     min-width: 748px;
-    width: 80%
+    width: 80%;
 }
 
 .two-columns__main-text_paragraph {
     line-height: 34px;
     font-size:  24px;
     font-weight: normal;
+    margin: 0;
 }
 
 .main-text_paragraph_padding {
@@ -156,7 +158,7 @@
 
 .table__cell {
     width:250px;
-    padding-top: 60px;
+    margin-top: 60px;
 }
 
 .table__heading {
